K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llmops-service
  namespace: llmops
spec:
  selector:
    app: llmops-app
  type: NodePort
  ports:
    - name: api
      port: 8000
      targetPort: 8000
      nodePort: 30080

    - name: ui
      port: 8501
      targetPort: 8501
      nodePort: 30081
